# wows-replay-parser

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  KNOWN_ISSUES.md  LICENSE  README.md  SECURITY.md  TASKS.md  TRAPS-parser.md  UNDECODED_AUDIT.md  claude_extra.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECRETS.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  regression.yml
.github/workflows/: canary.yml  ci.yml  docs.yml  publish.yml
api/events/: index.html
api/merge/: index.html
api/parsed-replay/: index.html
api/state/: index.html
architecture/: index.html
changelog/: index.html
concepts/dual-perspective/: index.html
concepts/events/: index.html
concepts/parser-pipeline/: index.html
development/contributing/: index.html
development/security/: index.html
docs/: architecture.md  decoded_methods_catalog.md  getting-started.md  index.md
docs/api/: events.md  merge.md  parsed-replay.md  state.md
docs/concepts/: dual-perspective.md  events.md  parser-pipeline.md
getting-started/: index.html
scripts/: inspect_blobs.py  update-gamedata.sh  verify_method_sort.py
search/: search_index.json
src/wows_replay_parser/: __init__.py  api.py  battle_results.py  cli.py  consumable_calc.py  gamedata_sync.py  interfaces.py  merge.py  ribbons.py  roster.py  ship_config.py
src/wows_replay_parser/events/: __init__.py  models.py  stream.py
src/wows_replay_parser/gamedata/: __init__.py  alias_registry.py  blob_decoders.py  def_loader.py  entity_registry.py  schema_builder.py
src/wows_replay_parser/packets/: __init__.py  decoder.py  implemented_by_parsers.py  method_id_detector.py  nested_property.py  type_id_detector.py  types.py
src/wows_replay_parser/replay/: __init__.py  reader.py
src/wows_replay_parser/state/: __init__.py  models.py  tracker.py
tests/: conftest.py  test_battle_results.py  test_chat.py  test_events.py  test_gamedata.py  test_integration.py  test_interfaces.py  test_merge.py  test_ribbons.py  test_state_tracker.py
tests/fixtures/: README.md
