[project]
name = "wows-replay-parser"
version = "0.1.0"
description = "World of Warships replay parser with dynamic schema loading from wows-gamedata"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "construct>=2.10",
    "lxml>=5.0",
    "pycryptodome>=3.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "lxml-stubs",
]
cli = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
wowsreplay = "wows_replay_parser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "construct",
    "construct.*",
    "Crypto",
    "Crypto.*",
    "Cryptodome",
    "Cryptodome.*",
    "msgpack",
    "msgpack.*",
    "click",
    "click.*",
    "rich",
    "rich.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
