[project]
name = "wows-replay-parser"
version = "0.1.1"
description = "World of Warships replay parser with dynamic schema loading from wows-gamedata"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "toalba", email = "tb@kleinundpartner.at" },
]
keywords = [
    "world-of-warships",
    "wows",
    "replay",
    "parser",
    "bigworld",
    "game-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "construct>=2.10",
    "lxml>=5.0",
    "pycryptodome>=3.20",
]

[project.urls]
Homepage = "https://github.com/toalba/wows-replay-parser"
Documentation = "https://toalba.github.io/wows-replay-parser/"
Repository = "https://github.com/toalba/wows-replay-parser"
Issues = "https://github.com/toalba/wows-replay-parser/issues"
Changelog = "https://github.com/toalba/wows-replay-parser/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "lxml-stubs",
]
cli = [
    "click>=8.0",
    "rich>=13.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
wowsreplay = "wows_replay_parser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
# Opinionated style rules we don't enforce: TYPE_CHECKING gymnastics for
# runtime-imported names, uppercase locals in tests, and nit-picks in SIM
# / B that reduce readability more than they help.
ignore = [
    "TC001",  # typing-only first-party import
    "TC003",  # typing-only stdlib import
    "N806",   # non-lowercase local (allowed for named constants in tests)
    "SIM103", # needless bool
    "SIM105", # contextlib.suppress over try/except/pass
    "SIM108", # ternary over if/else
    "SIM114", # combine if branches with or
    "SIM202", # negate != op
    "B007",   # unused loop control
    "B019",   # cached_property on instance methods (intentional in our tracker)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N806"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "construct",
    "construct.*",
    "Crypto",
    "Crypto.*",
    "Cryptodome",
    "Cryptodome.*",
    "msgpack",
    "msgpack.*",
    "click",
    "click.*",
    "rich",
    "rich.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
